--- a/index.html
+++ b/index.html
@@ -353,6 +353,32 @@
 .partnerCard .logoBox{
   background:#eef3ef;
 }
+/* === Partner-Logos größer + Overlay luftig === */
+.partnerCard .logoBox {
+  height: 180px;                /* vorher 120px */
+  background: #f4f6f5;
+}
+
+.partnerCard img {
+  max-height: 110px;            /* Logos dürfen größer werden */
+}
+
+/* Overlay anpassen */
+.partnerCard .info {
+  justify-content: center;      /* Text in der Mitte statt unten */
+  padding: 20px 18px;
+  font-size: 1rem;
+}
+
+.partnerCard .info h3 {
+  font-size: 1.15rem;
+  margin-bottom: 8px;
+}
+
+.partnerCard .info p {
+  font-size: 0.95rem;
+  line-height: 1.5;
+}
 
   </style>
   
@@ -691,6 +717,7 @@
   </script>
 </body>
 </html>
+
 
 
 
