--- a/index.html
+++ b/index.html
@@ -440,20 +440,20 @@
         </div>
       </section>
 
-      <!-- === Highlight: Studiogast Nina Scheer (ohne Link aktiv) === -->
-      <section class="card" style="border-left:6px solid #0a7d32; padding:18px 20px; background:#f9fafb; border-radius:16px; box-shadow:0 3px 12px rgba(0,0,0,.06);">
-        <h2 style="margin-top:0;">Heute Abend im Studio</h2>
-        <p>
-          <strong>Dr. Nina Scheer (SPD)</strong> – energiepolitische Sprecherin der Bundestagsfraktion – 
-          im Gespräch über den Ausstieg aus Erdgas-Strom und den beschleunigten Ausbau von Solarenergie in Bürgerhand.
-        </p>
-        <p style="margin:12px 0 0;">
-          <a href="javascript:void(0)" 
-             style="display:inline-block; background:#b8c8b9; color:#fff; text-decoration:none; font-weight:700; padding:10px 16px; border-radius:10px; cursor:default; opacity:.7;">
-             🎥 Livestream-Link folgt
-          </a>
-        </p>
-      </section>
+     <!-- === Highlight: Studiogast Nina Scheer (mit aktivem Link) === -->
+<section class="card" style="border-left:6px solid #0a7d32; padding:18px 20px; background:#f9fafb; border-radius:16px; box-shadow:0 3px 12px rgba(0,0,0,.06);">
+  <h2 style="margin-top:0;">Heute Abend im Studio</h2>
+  <p>
+    <strong>Dr. Nina Scheer (SPD)</strong> – energiepolitische Sprecherin der Bundestagsfraktion – 
+    im Gespräch über den Ausstieg aus Erdgas-Strom und den beschleunigten Ausbau von Solarenergie in Bürgerhand.
+  </p>
+  <p style="margin:14px 0 0;">
+    <a href="https://youtu.be/3gfFihpfzHo" target="_blank" rel="noopener"
+       style="display:inline-block; background:linear-gradient(135deg,#0a7d32,#0bbd54); color:#fff; text-decoration:none; font-weight:700; padding:10px 18px; border-radius:10px; box-shadow:0 6px 18px rgba(10,125,50,.25); transition:all .25s ease;">
+       🎥 Jetzt ansehen auf YouTube
+    </a>
+  </p>
+</section>
 
       <!-- Aktuelle Sendung -->
       <section id="sendung">
@@ -717,6 +717,7 @@
   </script>
 </body>
 </html>
+
 
 
 
