--- a/index.html
+++ b/index.html
@@ -440,20 +440,50 @@
         </div>
       </section>
 
-     <!-- === Highlight: Studiogast Nina Scheer (mit aktivem Link) === -->
-<section class="card" style="border-left:6px solid #0a7d32; padding:18px 20px; background:#f9fafb; border-radius:16px; box-shadow:0 3px 12px rgba(0,0,0,.06);">
+    <!-- === Highlight: Studiogast Nina Scheer (mit aktivem Link & erweitertem Text) === -->
+<section class="card" style="border-left:6px solid #0a7d32; padding:22px 22px; background:#f9fafb; border-radius:16px; box-shadow:0 3px 12px rgba(0,0,0,.06);">
   <h2 style="margin-top:0;">Heute Abend im Studio</h2>
+
   <p>
     <strong>Dr. Nina Scheer (SPD)</strong> – energiepolitische Sprecherin der Bundestagsfraktion – 
     im Gespräch über den Ausstieg aus Erdgas-Strom und den beschleunigten Ausbau von Solarenergie in Bürgerhand.
   </p>
-  <p style="margin:14px 0 0;">
+
+  <p>
+    Nina Scheer, energiepolitische Sprecherin der SPD-Bundestagsfraktion, bezieht klar Stellung zu den 
+    fossilen Rollback-Plänen von Bundeswirtschaftsministerin Reiche.
+  </p>
+
+  <p>
+    Im Gespräch macht sie deutlich: Der Koalitionsvertrag lässt keinen „Neustart der Energiewende“ 
+    im Sinne von Ministerin Reiche (CDU) zu. Die SPD hält an den vereinbarten Zielen fest – 
+    Ausbau der Erneuerbaren, Bestandsschutz für bestehende Anlagen und keine neue Abhängigkeit von fossilem Gas.
+  </p>
+
+  <p>
+    Scheer betont, dass der Automatismus hin zu neuen Erdgaskraftwerken nicht gegeben ist. 
+    Auch die von Reiche ins Spiel gebrachte Streichung der festen Einspeisevergütung lehnt sie entschieden ab – 
+    sie findet sich nicht im Koalitionsvertrag.
+  </p>
+
+  <p>
+    Ebenso erteilt die SPD-Energieexpertin den Plänen der Bundesnetzagentur, Bürgerinnen und Bürger 
+    mit Solaranlagen durch zusätzliche Abgaben zu belasten, eine klare Absage. 
+    Ihr Bekenntnis: <strong>Klares Ja zum Bestandsschutz und zur Bürgerenergiewende.</strong>
+  </p>
+
+  <p>
+    Das vollständige Interview jetzt exklusiv bei <strong>Leben mit der Energiewende TV</strong>.
+  </p>
+
+  <p style="margin:18px 0 0;">
     <a href="https://youtu.be/3gfFihpfzHo" target="_blank" rel="noopener"
        style="display:inline-block; background:linear-gradient(135deg,#0a7d32,#0bbd54); color:#fff; text-decoration:none; font-weight:700; padding:10px 18px; border-radius:10px; box-shadow:0 6px 18px rgba(10,125,50,.25); transition:all .25s ease;">
        🎥 Jetzt ansehen auf YouTube
     </a>
   </p>
 </section>
+
 
       <!-- Aktuelle Sendung -->
       <section id="sendung">
@@ -717,6 +747,7 @@
   </script>
 </body>
 </html>
+
 
 
 
