--- a/indexTest.html
+++ b/indexTest.html
@@ -4,6 +4,21 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Solarstrom statt Erdgas-Strom – Info & Mitmachen</title>
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Solarstrom statt Erdgas-Strom – Info & Mitmachen">
+  <meta property="og:description" content="Alle Infos zur Kampagne: Ziele, Hintergründe, Materialien und Mitmach-Möglichkeiten.">
+  <meta property="og:url" content="https://www.aktionsolarstrom.de/">
+  <meta property="og:image" content="https://www.aktionsolarstrom.de/assets/SocialCard.jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+
+  <!-- Twitter (X) Fallback -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Solarstrom statt Erdgas-Strom – Info & Mitmachen">
+  <meta name="twitter:description" content="Alle Infos zur Kampagne: Ziele, Hintergründe, Materialien und Mitmach-Möglichkeiten.">
+  <meta name="twitter:image" content="https://www.aktionsolarstrom.de/assets/SocialCard.jpg">
+
   <meta name="description" content="Alle Infos zur Kampagne Solarstrom statt Erdgas-Strom: Ziele, Hintergründe, Materialien und Mitmach-Möglichkeiten.">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap">
@@ -40,7 +55,7 @@
     a { color: var(--brand); text-decoration: none; }
     a:hover { text-decoration: underline; }
 
-    /* Accessible Focus Ring (sichtbar & konsistent) */
+    /* Accessible Focus Ring */
     :where(a, button, input, select, textarea, [tabindex]):focus-visible {
       outline: var(--focus-ring);
       outline-offset: 2px;
@@ -51,12 +66,10 @@
     .middle { grid-column:2; width:100%; padding: 0 16px; }
 
     /* ===== Theme: neutral vs. warm ===== */
-    /* Neutral (sachlich) */
     body.theme-neutral{
       --bg: #f7faf9;
       background: var(--bg) !important;
     }
-    /* Warm (Solar) */
     body.theme-warm {
       --bg: #f6f1e8;
       background: linear-gradient(180deg,#f9f6ef 0%, #ffffff 50%, #f4ebdc 100%) !important;
@@ -210,16 +223,57 @@
     .video-wrap iframe { position: absolute; inset: 0; width: 100%; height: 100%; border: 0; }
     @media (max-width:600px){ .video-wrap{ max-width:95vw; margin-bottom:16px; } }
 
-    /* ===== Partner (Hover-Effekt) ===== */
-    .partner { border:1px solid rgba(0,0,0,.08); border-radius:12px; padding:18px; background:#fff; box-shadow:0 2px 10px rgba(0,0,0,.04); }
-    .partner h2 { margin-top:0; }
-    .orgs { display:grid; gap:18px; grid-template-columns:1fr; align-items:start; }
-    @media (min-width:780px){ .orgs{ grid-template-columns:1fr 1fr } }
-    .org { display:grid; grid-template-columns:80px 1fr; gap:14px; align-items:start; }
-    .org .logoBox { display:flex; align-items:center; justify-content:center; background:#f9fafb; border:1px solid #e5e7eb; border-radius:10px; padding:10px; transition: transform .2s ease, box-shadow .2s ease; }
-    .org img { max-width:100%; height:auto; display:block; filter: grayscale(100%); transition: filter .2s ease; }
-    .org .logoBox:hover { transform: translateY(-2px); box-shadow:0 6px 18px rgba(0,0,0,.08); }
-    .org .logoBox:hover img { filter: none; }
+    /* ===== Partner-Grid mit Hover-Overlay ===== */
+    .partnersGrid{
+      display:grid; gap:18px;
+      grid-template-columns: repeat(3, minmax(0,1fr));
+    }
+    @media (max-width:900px){ .partnersGrid{grid-template-columns:repeat(2,1fr);} }
+    @media (max-width:560px){ .partnersGrid{grid-template-columns:1fr;} }
+
+    .partnerCard{
+      position:relative;
+      background:#fff; border:1px solid rgba(0,0,0,.08);
+      border-radius:12px; padding:0; text-align:center;
+      box-shadow:var(--shadow); overflow:hidden;
+      transition:transform .2s ease, box-shadow .2s ease;
+    }
+    .partnerCard:hover{
+      transform:translateY(-3px);
+      box-shadow:0 8px 26px rgba(0,0,0,.12);
+    }
+
+    /* Logo-Box */
+    .partnerCard .logoBox{
+      height:180px; display:flex; align-items:center; justify-content:center;
+      background:#f9fafb; border-bottom:1px solid #e5e7eb;
+    }
+    .partnerCard img{
+      max-height:72px; width:auto; object-fit:contain;
+      filter:grayscale(100%); transition:filter .3s ease;
+    }
+    .partnerCard:hover img{filter:none;}
+
+    /* Overlay-Text */
+    .partnerCard .info{
+      position:absolute; inset:0;
+      display:flex; flex-direction:column; justify-content:flex-end;
+      background:linear-gradient(to top, rgba(10,125,50,.9) 0%, rgba(10,125,50,.2) 60%, transparent 100%);
+      color:#fff; padding:16px; opacity:0; transition:opacity .35s ease;
+      backdrop-filter:blur(4px);
+    }
+    .partnerCard:hover .info{opacity:1;}
+
+    .partnerCard .info h3{
+      margin:0 0 4px; font-size:1rem; font-weight:700; color:#fff;
+    }
+    .partnerCard .info p{
+      margin:0; font-size:.9rem; line-height:1.4; opacity:.95;
+    }
+    .partnerCard .info a{
+      color:#ffd84a; font-weight:600; text-decoration:none;
+    }
+    .partnerCard .info a:hover{text-decoration:underline;}
 
     /* Footer */
     footer .legal { text-align:center; display:block; }
@@ -256,7 +310,107 @@
     .theme-toggle button[aria-pressed="true"]{
       background: linear-gradient(135deg,#0a7d32,#0bbd54); color:#fff; border-color:transparent;
     }
+    /* === Partner-Overlay: Kontrast-Fix === */
+.partnerCard .info{
+  /* dunkler, homogener Hintergrund statt sehr transparenter Verlauf */
+  background: linear-gradient(
+    to top,
+    rgba(7, 34, 18, .90) 0%,
+    rgba(7, 34, 18, .82) 60%,
+    rgba(7, 34, 18, .50) 100%
+  );
+  color:#fff;
+  text-shadow: 0 1px 1px rgba(0,0,0,.45);  /* hebt Weiß deutlich ab */
+  padding: 16px 16px 14px;
+}
+.partnerCard .info h3{
+  font-size: 1.05rem;
+  margin-bottom: 6px;
+}
+.partnerCard .info p{
+  font-size: .92rem;
+  line-height: 1.45;
+  opacity: .98;               /* mehr Lesbarkeit als .95 */
+}
+
+/* Link gut sichtbar als „Pill“ */
+.partnerCard .info a{
+  display:inline-block;
+  margin-top: 8px;
+  padding: 6px 12px;
+  border-radius: 999px;
+  background: #ffd84a;        /* Solar-Gelb */
+  color: #0b3d16;             /* sehr dunkles Grün für 7:1 Kontrast */
+  font-weight: 800;
+  text-decoration: none;
+  box-shadow: 0 2px 6px rgba(0,0,0,.22);
+}
+.partnerCard .info a:hover{
+  filter: brightness(.95);
+}
+
+/* etwas dunkleres Logo-Panel, damit der Übergang stimmig wirkt */
+.partnerCard .logoBox{
+  background:#eef3ef;
+}
+/* === Partner-Logos größer + Overlay luftig === */
+.partnerCard .logoBox {
+  height: 250px;                /* vorher 120px */
+  background: #f4f6f5;
+}
+
+.partnerCard img {
+  max-height: 110px;            /* Logos dürfen größer werden */
+}
+
+/* Overlay anpassen */
+.partnerCard .info {
+  justify-content: center;      /* Text in der Mitte statt unten */
+  padding: 20px 18px;
+  font-size: 1rem;
+}
+
+.partnerCard .info h3 {
+  font-size: 1.15rem;
+  margin-bottom: 8px;
+}
+
+.partnerCard .info p {
+  font-size: 0.95rem;
+  line-height: 1.5;
+}
+
+/* === Lazy YouTube === */
+.yt-lazy{ position:relative; border-radius:12px; overflow:hidden; background:#000; box-shadow:0 6px 24px rgba(0,0,0,.15); }
+.yt-lazy .yt-play{
+  position:relative; display:block; width:100%; aspect-ratio:16/9;
+  border:0; padding:0; background:none; cursor:pointer;
+}
+.yt-lazy img{ position:absolute; inset:0; width:100%; height:100%; object-fit:cover; filter:brightness(.9) contrast(1.05); }
+.yt-lazy .yt-badge{
+  position:absolute; left:12px; top:12px; z-index:2;
+  background:#ffffffcc; backdrop-filter:blur(6px); color:#0a7d32;
+  font-weight:700; padding:4px 8px; border-radius:8px; font-size:.85rem;
+}
+.yt-lazy .yt-icon{
+  position:absolute; inset:auto; left:50%; top:50%; transform:translate(-50%,-50%);
+  display:inline-grid; place-items:center; width:74px; height:74px; border-radius:999px;
+  background:linear-gradient(135deg,#0a7d32,#0bbd54); box-shadow:0 10px 30px rgba(10,125,50,.35);
+}
+.yt-lazy .yt-icon::before{
+  content:""; display:block; width:0; height:0; border-left:18px solid #fff; border-top:12px solid transparent; border-bottom:12px solid transparent; margin-left:4px;
+}
+.yt-lazy .yt-caption{
+  position:absolute; left:0; right:0; bottom:0; padding:10px 12px; color:#fff; font-weight:600;
+  background:linear-gradient(180deg, transparent 0%, rgba(0,0,0,.55) 70%, rgba(0,0,0,.75) 100%);
+  text-shadow:0 1px 1px rgba(0,0,0,.5);
+}
+/* Keyboard focus */
+.yt-lazy .yt-play:focus-visible{ outline: var(--focus-ring); outline-offset:4px; border-radius:12px; }
+
+    
   </style>
+  
 </head>
 <body class="theme-warm">
   <div class="page">
@@ -315,21 +469,34 @@
         </div>
       </section>
 
-      <!-- === Highlight: Studiogast Nina Scheer (ohne Link aktiv) === -->
-<section class="card" style="border-left:6px solid #0a7d32; padding:18px 20px; background:#f9fafb; border-radius:16px; box-shadow:0 3px 12px rgba(0,0,0,.06);">
-  <h2 style="margin-top:0;">Heute Abend im Studio</h2>
+   <!-- === Rückblick: Gespräch mit Dr. Nina Scheer (Lazy YouTube) === -->
+<section class="card" style="border-left:6px solid #0a7d32; padding:22px 22px; background:#f9fafb; border-radius:16px; box-shadow:0 3px 12px rgba(0,0,0,.06);">
+  <h2 style="margin-top:0;">Jetzt ansehen: Gespräch mit Dr. Nina Scheer (SPD)</h2>
+
   <p>
-    <strong>Dr. Nina Scheer (SPD)</strong> – energiepolitische Sprecherin der Bundestagsfraktion – 
-    im Gespräch über den Ausstieg aus Erdgas-Strom und den beschleunigten Ausbau von Solarenergie in Bürgerhand.
+    Nina Scheer, energiepolitische Sprecherin der SPD-Bundestagsfraktion, bezieht klar Stellung zu den fossilen
+    Rollback-Plänen von Bundeswirtschaftsministerin Reiche. Sie macht deutlich: Der Koalitionsvertrag lässt keinen
+    „Neustart der Energiewende“ im Sinne von Ministerin Reiche (CDU) zu. Die SPD hält an Ausbau der Erneuerbaren,
+    Bestandsschutz und an keiner neuen Abhängigkeit von fossilem Gas fest. Auch eine Streichung der festen
+    Einspeisevergütung findet sich nicht im Vertrag – und zusätzliche Abgaben für Bürger-Solar lehnt sie ab.
   </p>
-  <p style="margin:12px 0 0;">
-    <a href="javascript:void(0)" 
-       style="display:inline-block; background:#b8c8b9; color:#fff; text-decoration:none; font-weight:700; padding:10px 16px; border-radius:10px; cursor:default; opacity:.7;">
-       🎥 Livestream-Link folgt
-    </a>
-  </p>
+
+  <!-- Lazy-YouTube: lädt erst beim Klick -->
+  <div class="video-wrap yt-lazy" data-ytid="3gfFihpfzHo" aria-label="YouTube: Gespräch mit Dr. Nina Scheer">
+    <button class="yt-play" type="button" aria-label="Video abspielen">
+      <span class="yt-badge">LMdE TV</span>
+      <img src="https://i.ytimg.com/vi/3gfFihpfzHo/hqdefault.jpg" loading="lazy"
+           alt="Vorschaubild – Gespräch mit Dr. Nina Scheer">
+      <span class="yt-icon" aria-hidden="true"></span>
+      <div class="yt-caption">🎥 Jetzt ansehen auf YouTube</div>
+    </button>
+    <noscript>
+      <p><a class="cta secondary" href="https://youtu.be/3gfFihpfzHo" target="_blank" rel="noopener">
+        Video auf YouTube öffnen
+      </a></p>
+    </noscript>
+  </div>
 </section>
-<!-- === /Highlight Ende === -->
 
 
       <!-- Aktuelle Sendung -->
@@ -423,29 +590,42 @@
         </div>
       </section>
 
-      <!-- Träger -->
+      <!-- Träger (NEU: Partner-Grid mit Hover-Overlay) -->
       <section id="partner" class="partner">
         <h2 class="section-title">Träger der Kampagne</h2>
         <p>Die Kampagne wird von dem VEEG e.V. und der EWG durchgeführt.</p>
-        <div class="orgs">
-          <article class="org">
+
+        <div class="partnersGrid" aria-label="Partnerorganisationen">
+          <article class="partnerCard">
             <div class="logoBox">
-              <img src="assets/veeglogo.svg" alt="VEEG e. V. – Verband EnergieErzeugende Gebäude">
+              <img src="assets/LEWLOGOKLEIN.png" alt="Leben mit der Energiewende">
             </div>
-            <div>
-              <h3>VEEG e. V. – Verband EnergieErzeugende Gebäude</h3>
-              <p>Der VEEG e. V. fördert Gebäude als aktive Energieproduzenten – also solche, die ihren Energiebedarf selbst erzeugen, möglichst energiekostenfrei werden und Klimaschutz praktisch mitdenken.</p>
-              <p><a href="https://ve-eg.de/" target="_blank" rel="noopener">ve-eg.de</a></p>
+            <div class="info">
+              <h3>Leben mit der Energiewende</h3>
+              <p>Plattform &amp; TV-Magazin für die Energiewende in Bürgerhand.</p>
+              <a href="https://www.lebenmitderenergiewende.de/" target="_blank" rel="noopener">lebenmitderenergiewende.de</a>
             </div>
           </article>
-          <article class="org">
+
+          <article class="partnerCard">
             <div class="logoBox">
-              <img src="assets/energywatchgroup.png" alt="Energy Watch Group (EWG)">
+              <img src="assets/veeglogo.svg" alt="VEEG – Verein Energie Erzeugende Gebäude e. V.">
             </div>
-            <div>
+            <div class="info">
+              <h3>VEEG e. V. – Verband EnergieErzeugende Gebäude</h3>
+              <p>Fördert Gebäude als aktive Energieproduzenten – energieautark, klimafreundlich, zukunftsweisend.</p>
+              <a href="https://ve-eg.de/" target="_blank" rel="noopener">ve-eg.de</a>
+            </div>
+          </article>
+
+          <article class="partnerCard">
+            <div class="logoBox">
+              <img src="assets/energywatchgroup.png" alt="Energy Watch Group">
+            </div>
+            <div class="info">
               <h3>Energy Watch Group (EWG)</h3>
-              <p>Die Energy Watch Group (EWG) ist ein gemeinnütziger Think Tank, der sich dem Ziel verschrieben hat, die Klimakrise zu stoppen und die Erdatmosphäre wieder abzukühlen.</p>
-              <p><a href="https://energywatchgroup.org/" target="_blank" rel="noopener">energywatchgroup.org</a></p>
+              <p>Gemeinnütziger Think Tank für globale Energiewende und Klimastabilisierung.</p>
+              <a href="https://energywatchgroup.org/" target="_blank" rel="noopener">energywatchgroup.org</a>
             </div>
           </article>
         </div>
@@ -486,7 +666,6 @@
         }
         try{ localStorage.setItem(KEY, mode); }catch(e){}
       }
-      // Initial
       try{
         const saved=localStorage.getItem(KEY);
         if(saved==='neutral') apply('neutral'); else apply('warm');
@@ -580,9 +759,26 @@
       els.forEach(e=>io.observe(e));
     })();
   </script>
+
+<script>
+  // Lazy-YouTube: ersetzt Platzhalter beim Klick durch nocookie-iframe mit Autoplay
+  document.addEventListener('click', function(e){
+    const btn = e.target.closest('.yt-lazy .yt-play'); if(!btn) return;
+    const wrap = btn.closest('.yt-lazy'); const id = wrap?.dataset.ytid; if(!id) return;
+    const iframe = document.createElement('iframe');
+    iframe.setAttribute('title','YouTube Video Player');
+    iframe.setAttribute('allow','accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share');
+    iframe.setAttribute('allowfullscreen','');
+    iframe.referrerPolicy = 'strict-origin-when-cross-origin';
+    iframe.src = `https://www.youtube-nocookie.com/embed/${id}?autoplay=1`;
+    iframe.style.width = '100%'; iframe.style.height = '100%'; iframe.style.border = '0';
+    wrap.replaceChildren(iframe);        // tauscht das Placeholder-Element aus
+  }, {passive:true});
+</script>
+
+  
 </body>
 </html>
-
 
 
 
