--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
       <div class="yt-caption">🎥 Jetzt ansehen auf YouTube</div>
     </button>
     <noscript>
-      <p><a class="cta secondary" href="https://youtu.be/teqTU9uoRqw" target="_blank" rel="noopener">
+      <p><a class="cta secondary" href="https://youtu.be/teqTU9uoRqw?si=e7-fnZ8SzOFtJZti" target="_blank" rel="noopener">
         Video auf YouTube öffnen
       </a></p>
     </noscript>
@@ -779,6 +779,7 @@
   
 </body>
 </html>
+
 
 
 
