--- a/index.html
+++ b/index.html
@@ -482,16 +482,16 @@
   </p>
 
   <!-- Lazy-YouTube: lädt erst beim Klick -->
-  <div class="video-wrap yt-lazy" data-ytid="3gfFihpfzHo" aria-label="YouTube: Gespräch mit Dr. Nina Scheer">
+  <div class="video-wrap yt-lazy" data-ytid="teqTU9uoRqw" aria-label="YouTube: Gespräch mit Dr. Nina Scheer">
     <button class="yt-play" type="button" aria-label="Video abspielen">
       <span class="yt-badge">LMdE TV</span>
-      <img src="https://i.ytimg.com/vi/3gfFihpfzHo/hqdefault.jpg" loading="lazy"
+      <img src="https://i.ytimg.com/vi/teqTU9uoRqw/hqdefault.jpg" loading="lazy"
            alt="Vorschaubild – Gespräch mit Dr. Nina Scheer">
       <span class="yt-icon" aria-hidden="true"></span>
       <div class="yt-caption">🎥 Jetzt ansehen auf YouTube</div>
     </button>
     <noscript>
-      <p><a class="cta secondary" href="https://youtu.be/teqTU9uoRqw?si=e7-fnZ8SzOFtJZti" target="_blank" rel="noopener">
+      <p><a class="cta secondary" href="https://www.youtube.com/watch?v=teqTU9uoRqw" target="_blank" rel="noopener">
         Video auf YouTube öffnen
       </a></p>
     </noscript>
@@ -779,6 +779,7 @@
   
 </body>
 </html>
+
 
 
 
