--- a/indexTest.html
+++ b/indexTest.html
@@ -498,14 +498,14 @@
       <ul class="event-facts" aria-label="Veranstaltungsdetails">
         <li><strong>Datum:</strong> Donnerstag, 20.11.2025, <strong>18:30 Uhr</strong></li>
         <li><strong>Ort:</strong> GLASHAUS, Münchener Straße 45 · 91154 Roth</li>
-        <li><strong>Gäste:</strong> Hans-Josef Fell (EWG), Dr. Joachim Holz (Energiebündel Roth-Schwabach e.V.)</li>
+        <li><strong>Gäste:</strong> Hans-Josef Fell (EWG) </li>
         <li><strong>Themen:</strong> Kosten, Einspeisevergütung, Eigenverbrauch, Investitions- &amp; Bestandsschutz</li>
       </ul>
 
       <div class="event-cta">
         <!-- 🔧 HIER EURE MAIL-ADRESSE EINTRAGEN -->
         <a class="cta primary"
-           href="mailto:MAILTO-ADRESSE@DEINE-DOMAIN?subject=Anmeldung%3A%20Roth%2020.11.2025%20%E2%80%93%20Teurer%20Erdgasstrom%20statt%20Solarstrom%3F&body=Hallo%2C%0A%0Aich%20melde%20mich%20zur%20Veranstaltung%20am%2020.11.2025%20in%20Roth%20an.%0A%0AName%3A%20_%0APersonenzahl%3A%20_%0AKontakt%20(E-Mail%2FTelefon)%3A%20_%0ABemerkungen%3A%20_%0A%0ADanke!%0A"
+           href="mailto:farenski@lebenmitderenergiewende.desubject=Anmeldung%3A%20Roth%2020.11.2025%20%E2%80%93%20Teurer%20Erdgasstrom%20statt%20Solarstrom%3F&body=Hallo%2C%0A%0Aich%20melde%20mich%20zur%20Veranstaltung%20am%2020.11.2025%20in%20Roth%20an.%0A%0AName%3A%20_%0APersonenzahl%3A%20_%0AKontakt%20(E-Mail%2FTelefon)%3A%20_%0ABemerkungen%3A%20_%0A%0ADanke!%0A"
            target="_blank" rel="nofollow">
            Anmelden per E-Mail
         </a>
@@ -849,6 +849,7 @@
   
 </body>
 </html>
+
 
 
 
