--- a/indexTest.html
+++ b/indexTest.html
@@ -504,11 +504,11 @@
 
       <div class="event-cta">
         <!-- 🔧 HIER EURE MAIL-ADRESSE EINTRAGEN -->
-        <a class="cta primary"
-           href="mailto:farenski@lebenmitderenergiewende.de?subject=Anmeldung%3A%20Roth%2020.11.2025%20%E2%80%93%20Teurer%20Erdgasstrom%20statt%20Solarstrom%3F&body=Hallo%2C%0A%0Aich%20melde%20mich%20zur%20Veranstaltung%20am%2020.11.2025%20in%20Roth%20an.%0A%0AName%3A%20_%0APersonenzahl%3A%20_%0AKontakt%20(E-Mail%2FTelefon)%3A%20_%0ABemerkungen%3A%20_%0A%0ADanke!%0A"
-           target="_blank" rel="nofollow">
-           Anmelden per E-Mail
-        </a>
+        <a id="eventMailto"
+   class="cta primary"
+   href="mailto:farenski@lebenmitderenergiewende.de?subject=Anmeldung%3A%20Roth%2020.11.2025%20%E2%80%93%20Teurer%20Erdgasstrom%20statt%20Solarstrom%3F&body=Hallo%2C%0A%0Aich%20melde%20mich%20zur%20Veranstaltung%20am%2020.11.2025%20in%20Roth%20an.%0A%0AName%3A%20_%0APersonenzahl%3A%20_%0AKontakt%20(E-Mail%2FTelefon)%3A%20_%0ABemerkungen%3A%20_%0A%0ADanke!%0A">
+   Anmelden per E-Mail
+</a>
 
         <!-- Kalenderlink (optional, kann so bleiben) -->
         <a class="cta secondary"
@@ -849,6 +849,7 @@
   
 </body>
 </html>
+
 
 
 
