--- a/indexTest.html
+++ b/indexTest.html
@@ -498,16 +498,15 @@
       <ul class="event-facts" aria-label="Veranstaltungsdetails">
         <li><strong>Datum:</strong> Donnerstag, 20.11.2025, <strong>18:30 Uhr</strong></li>
         <li><strong>Ort:</strong> GLASHAUS, Münchener Straße 45 · 91154 Roth</li>
-        <li><strong>Gäste:</strong> Hans-Josef Fell (EWG) </li>
+        <li><strong>Gäste:</strong> u.a. Hans-Josef Fell (EWG) </li>
         <li><strong>Themen:</strong> Kosten, Einspeisevergütung, Eigenverbrauch, Investitions- &amp; Bestandsschutz</li>
       </ul>
 
       <div class="event-cta">
         <!-- 🔧 HIER EURE MAIL-ADRESSE EINTRAGEN -->
-        <a id="eventMailto"
-   class="cta primary"
-   href="mailto:farenski@lebenmitderenergiewende.de?subject=Anmeldung%3A%20Roth%2020.11.2025%20%E2%80%93%20Teurer%20Erdgasstrom%20statt%20Solarstrom%3F&body=Hallo%2C%0A%0Aich%20melde%20mich%20zur%20Veranstaltung%20am%2020.11.2025%20in%20Roth%20an.%0A%0AName%3A%20_%0APersonenzahl%3A%20_%0AKontakt%20(E-Mail%2FTelefon)%3A%20_%0ABemerkungen%3A%20_%0A%0ADanke!%0A">
-   Anmelden per E-Mail
+        <a class="cta primary"
+   href="mailto:farenski%40lebenmitderenergiewende.de?subject=Anmeldung%3A%20Roth%2020.11.2025%20%E2%80%93%20Teurer%20Erdgasstrom%20statt%20Solarstrom%3F&body=Hallo%2C%0A%0Aich%20melde%20mich%20zur%20Veranstaltung%20am%2020.11.2025%20in%20Roth%20an.%0A%0AName%3A%20_%0APersonenzahl%3A%20_%0AKontakt%20%28E-Mail%2FTelefon%29%3A%20_%0ABemerkungen%3A%20_%0A%0ADanke%21%0A">
+  Anmelden per E-Mail
 </a>
 
         <!-- Kalenderlink (optional, kann so bleiben) -->
@@ -866,6 +865,7 @@
   
 </body>
 </html>
+
 
 
 
